--- a/SCORE KEEPER FORM EVENTS/index.html
+++ b/SCORE KEEPER FORM EVENTS/index.html
@@ -4,36 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700;900&display=swap" rel="stylesheet"> 
     <title>Score Keeper using Form Events</title>
 </head>
 <body class='flex'>
     <main class='container flex'>
+
         <img class='image-header' src='./images/two-rackets-and-a-boll.jpg'>
+        <div class="content-box flex">
+            <h2>Ping Pong Score Keeper</h2>
 
-        <div>
-            <h1>Ping Pong Score Keeper</h1>
-        </div>
-
-        <div>
             <h2 id='score'><span id="player1">0</span> to <span id="player2">0</span></h2>
             <p>Use the buttons below to keep score.</p>
-            <select name='bestOf' id='bestOf'>
-                <option>5</option>
-                <option>6</option>
-                <option>7</option>
-                <option>8</option>
-                <option>9</option>
-                <option>10</option>
-            </select>
-        </div>
+            <div class="select-container flex">
+                <span>Best of:</span>
+                <select name='bestOf' id='bestOf'>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                </select>
+            </div>
 
-        <form id='buttons'>
-            <button name='playerOneButton'>+1 Player One</button>
-            <button name='playerTwoButton'>+1 Player Two</button>
-            <button name='resetButton'>Reset</button>
-        </form>
+
+            <form id='buttons' class="select-container flex">
+                <button name='playerOneButton'>+1 Player One</button>
+                <button name='playerTwoButton'>+1 Player Two</button>
+                <button name='resetButton'>Reset</button>
+            </form>
+
+        </div>
 
     </main>
 <script src="./script.js"></script>
