Some Styling Added with pure css

--- a/SCORE KEEPER FORM EVENTS/index.html
+++ b/SCORE KEEPER FORM EVENTS/index.html
@@ -32,10 +32,10 @@
             </div>
 
 
-            <form id='buttons' class="select-container flex">
-                <button name='playerOneButton'>+1 Player One</button>
-                <button name='playerTwoButton'>+1 Player Two</button>
-                <button name='resetButton'>Reset</button>
+            <form id='buttons' class="select-container flex buttons-form">
+                <button class="button" name='playerOneButton'>+1 Player One</button>
+                <button class="button" name='playerTwoButton'>+1 Player Two</button>
+                <button class="button" name='resetButton'>Reset</button>
             </form>
 
         </div>
