--- a/SCORE KEEPER FORM EVENTS/index.html
+++ b/SCORE KEEPER FORM EVENTS/index.html
@@ -17,30 +17,30 @@
         <div class="content-box flex">
             <h2>Ping Pong Score Keeper</h2>
 
-            <h2 id='score'><span id="player1">0</span> to <span id="player2">0</span></h2>
+            <h2 id='score'><span id="p1Span">0</span> to <span id="p2Span">0</span></h2>
             <p>Use the buttons below to keep score.</p>
             <div class="select-container flex">
                 <span>Best of:</span>
                 <select name='bestOf' id='bestOf'>
-                    <option>5</option>
-                    <option>6</option>
-                    <option>7</option>
-                    <option>8</option>
-                    <option>9</option>
-                    <option>10</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
                 </select>
             </div>
 
 
             <form id='buttons' class="select-container flex buttons-form">
-                <button class="button" name='playerOneButton'>+1 Player One</button>
-                <button class="button" name='playerTwoButton'>+1 Player Two</button>
-                <button class="button" name='resetButton'>Reset</button>
+                <button id ="p1Button" class="button" name='playerOneButton'>+1 Player One</button>
+                <button id ="p2Button" class="button" name='playerTwoButton'>+1 Player Two</button>
+                <button id ="resetButton" class="button" name='resetButton'>Reset</button>
             </form>
 
         </div>
 
     </main>
-<script src="./script.js"></script>
+<script src="./script2.js"></script>
 </body>
 </html>
